fix subscribe more content overflow in small screen device

--- a/src/app/main/dialog/dialog.component.css
+++ b/src/app/main/dialog/dialog.component.css
@@ -13,22 +13,50 @@
     z-index: 1000;
     margin: auto;
     position: fixed;
-    top: 100px; left: 0; bottom: 0; right: 0;
+    top: 120px; left: 0; bottom: 200px; right: 0;
     min-height: 200px;
     width: 90%;
     max-width: 800px;
 
 }
 .more-subscription-dialog {
+    height:100%;
     border-radius: 10px;
     box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
     background-color: #fff;
     padding: 12px;
 }
 
-@media (min-width: 768px) {
-    .more-subscription-dialog {
-        top: 40px;
+.more-subscription-dialog > h4{
+    position: absolute;
+    left: 0;
+    right:0;
+    top: 15px;
+    height:30px;
+}
+
+.more-subscription-dialog > .channels-display{
+    position: absolute;
+    align-content: flex-start;
+    left:10px;
+    right:10px;
+    bottom: 70px;
+    top:70px;
+    overflow-y: auto;
+}
+
+.more-subscription-dialog-footer{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 10px;
+    height: 90px;
+}
+
+@media only screen and (max-height: 750px) {
+    .more-subscription-dialog-container{
+        top: 70px;
+        bottom: 80px;
     }
 }
 
